Added Some Examples

--- a/Code/index.html
+++ b/Code/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <section id = "content">
-    Actual content, shapes and game goes here
+    <div id = "gameArea"></div> <!--Actual content, shapes and game goes here-->
     <div id = "buttons"></div>
     <hr>
     <aside id = "explain">
