--- a/Code/index.html
+++ b/Code/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Random Tangram Generator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="helpers.js"></script>
     <script src="intadjoinsqrt2.js"></script>
     <script src="point.js"></script>
     <script src="directions.js"></script>
