Added Outline Computation

--- a/Code/index.html
+++ b/Code/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Random Tangram Generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="helpers.js"></script>
     <script src="intadjoinsqrt2.js"></script>
     <script src="point.js"></script>
+    <script src="lineSegement.js"></script>
     <script src="directions.js"></script>
     <script src="tan.js"></script>
     <script src="tangram.js"></script>
@@ -49,7 +51,6 @@
             </div>
     </div>
     <div id="buttons"></div>
-    <hr>
     <aside id="explain">
         Some kind of explanation for what is to be done here (either choose a
         shape or play the game)
