First Buggy Generator Version

--- a/Code/index.html
+++ b/Code/index.html
@@ -13,6 +13,7 @@
     <script src="tan.js"></script>
     <script src="tangram.js"></script>
     <script src="exampleTangrams.js"></script>
+    <script src="generator.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
