Draggable and Rotatable Pieces

--- a/Code/index.html
+++ b/Code/index.html
@@ -54,7 +54,11 @@
     </div>
     <div class = "clear"></div>
     <div id="buttons">
-        <button class = re onclick="window.location.reload()">Regenerate</button>
+        <button class = re id = generate onclick="window.location.reload()">Regenerate</button>
+        <button class = re id = select>Reselect</button>
+        <button class = re id = set>Reset</button>
+        <button class = re id = hint>Hint</button>
+        <button class = re id = sol>Solution</button>
     </div>
     <aside id="explain">
         Some kind of explanation for what is to be done here (either choose a
