Small Changes to Generator and Tan Dragging

--- a/Code/index.html
+++ b/Code/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header>
-    <img src="logo.svg" onerror="this.src='your.png'">
+    <!--<img src="logo.svg" onerror="this.src='your.png'">-->
 </header>
 
 <!--Actual content, shapes and game goes here-->
@@ -54,7 +54,7 @@
     </div>
     <div class = "clear"></div>
     <div id="buttons">
-        <button class = re id = generate onclick="window.location.reload()">Regenerate</button>
+        <button class = re id = generate>Regenerate</button>
         <button class = re id = select>Reselect</button>
         <button class = re id = set>Reset</button>
         <button class = re id = hint>Hint</button>
