--- a/Code/index.html
+++ b/Code/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Random Tangram Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <script src="helpers.js"></script>
     <script src="intadjoinsqrt2.js"></script>
@@ -54,11 +55,11 @@
     </div>
     <div class = "clear"></div>
     <div id="buttons">
-        <button class = re id = generate>Regenerate</button>
-        <button class = re id = select>Reselect</button>
-        <button class = re id = set>Reset</button>
-        <button class = re id = hint>Hint</button>
-        <button class = re id = sol>Solution</button>
+        <button class = re id = generate> <i class="fa fa-repeat"></i>  Regenerate</button>
+        <button class = re id = select> <i class="fa fa-arrow-left"></i>  Reselect</button>
+        <button class = re id = set> <i class="fa fa-repeat"></i> Reset</button>
+        <button class = re id = hint> <i class="fa fa-lightbulb-o"></i>  Hint</button>
+        <button class = re id = sol><i class="fa fa-check"></i> Solution</button>
     </div>
     <aside id="explain">
         Some kind of explanation for what is to be done here (either choose a
