Snapping to Exact Coordinates

--- a/Code/index.html
+++ b/Code/index.html
@@ -55,11 +55,11 @@
     </div>
     <div class = "clear"></div>
     <div id="buttons">
-        <button class = re id = generate> <i class="fa fa-repeat"></i>  Regenerate</button>
-        <button class = re id = select> <i class="fa fa-arrow-left"></i>  Reselect</button>
-        <button class = re id = set> <i class="fa fa-repeat"></i> Reset</button>
-        <button class = re id = hint> <i class="fa fa-lightbulb-o"></i>  Hint</button>
-        <button class = re id = sol><i class="fa fa-check"></i> Solution</button>
+        <button id = generate> <i class="fa fa-repeat"></i><span class = buttonText>  Regenerate</span></button>
+        <button id = select> <i class="fa fa-arrow-left"></i><span class = buttonText>  Reselect</span></button>
+        <button id = set> <i class="fa fa-repeat"></i><span class = buttonText>  Reset</span></button>
+        <button id = hint> <i class="fa fa-lightbulb-o"></i><span class = buttonText>  Hint</span></button>
+        <button id = sol><i class="fa fa-check"></i> <span class = buttonText>  Solution</span></button>
     </div>
     <aside id="explain">
         Some kind of explanation for what is to be done here (either choose a
