--- a/Code/index.html
+++ b/Code/index.html
@@ -16,6 +16,7 @@
     <script src="lineSegement.js"></script>
     <script src="directions.js"></script>
     <script src="tan.js"></script>
+    <script src="evaluation.js"></script>
     <script src="tangram.js"></script>
     <script src="exampleTangrams.js"></script>
     <script src="generator.js"></script>
