Added Server communication
+ more Evaluation

--- a/Code/index.html
+++ b/Code/index.html
@@ -20,6 +20,7 @@
     <script src="tangram.js"></script>
     <script src="exampleTangrams.js"></script>
     <script src="generator.js"></script>
+    <script src="serverCommunication.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
