--- a/Code/index.html
+++ b/Code/index.html
@@ -19,7 +19,7 @@
     <script src="evaluation.js"></script>
     <script src="tangram.js"></script>
     <script src="exampleTangrams.js"></script>
-    <script src="generator.js"></script>
+    <!--<script src="generator.js"></script>-->
     <script src="serverCommunication.js"></script>
     <script src="script.js"></script>
 </head>
