--- a/Code/index.html
+++ b/Code/index.html
@@ -21,6 +21,7 @@
     <script src="exampleTangrams.js"></script>
     <!--<script src="generator.js"></script>-->
     <script src="serverCommunication.js"></script>
+    <script src="loading.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -31,6 +32,10 @@
 <!--Actual content, shapes and game goes here-->
 <section id="content">
     <div id="gameArea">
+        <svg id="loading" xmlns="http://www.w3.org/2000/svg" width="100%"
+             height="100%" viewBox="0 0 36 8"
+             preserveAspectRatio="xMinYMin meet">
+        </svg>
         <svg id="game" xmlns="http://www.w3.org/2000/svg" width="100%"
              height="100%" viewBox="0 0 90 60"
              preserveAspectRatio="xMinYMin meet">
