Finished Loading Screen

--- a/Code/index.html
+++ b/Code/index.html
@@ -33,7 +33,7 @@
 <section id="content">
     <div id="gameArea">
         <svg id="loading" xmlns="http://www.w3.org/2000/svg" width="100%"
-             height="100%" viewBox="0 0 36 8"
+             height="100%" viewBox="0 0 30 18"
              preserveAspectRatio="xMinYMin meet">
         </svg>
         <svg id="game" xmlns="http://www.w3.org/2000/svg" width="100%"
@@ -96,7 +96,7 @@
     </aside>
 </section>
 
-<footer>Copyright, Contact info, maybe Language setting</footer>
+<footer><i class="fa fa-copyright"></i> 2015 Wiebke Koepp<!--<i class="fa fa-envelope-o"></i> tangrams[at]wiebke-koepp.de--></footer>
 
 </body>
 </html>
