Added Browser Fallback

--- a/Code/index.html
+++ b/Code/index.html
@@ -76,6 +76,7 @@
                  preserveAspectRatio="xMinYMin meet">
             </svg>
         </div>
+        <noscript><img src="fallback.png" alt="javascript is switched off"></noscript>
     </div>
     <div class="clear"></div>
     <div id="buttons">
