Some restructuring, comments and revert range

--- a/Code/index.html
+++ b/Code/index.html
@@ -92,8 +92,12 @@
         </button>
     </div>
     <aside id="explain">
-        Some kind of explanation for what is to be done here (either choose a
-        shape or play the game)
+        <p id = "loadParagraph">Some kind of explanation for what is to be done here (either choose a
+            shape or play the game)</p>
+        <p id = "chooseParagraph">Some kind of explanation for what is to be done here (either choose a
+            shape or play the game)</p>
+        <p id = "gameParagraph">Some kind of explanation for what is to be done here (either choose a
+            shape or play the game)</p>
     </aside>
 </section>
 
