--- a/Code/index.html
+++ b/Code/index.html
@@ -92,12 +92,20 @@
         </button>
     </div>
     <aside id="explain">
-        <p id = "loadParagraph">Some kind of explanation for what is to be done here (either choose a
-            shape or play the game)</p>
-        <p id = "chooseParagraph">Some kind of explanation for what is to be done here (either choose a
-            shape or play the game)</p>
-        <p id = "gameParagraph">Some kind of explanation for what is to be done here (either choose a
-            shape or play the game)</p>
+        <p id = "loadParagraph"><b>Tangram</b> is an old chinese puzzle, where 7 puzzle pieces called <b>tans</b>
+            have to be placed within a given shape in a way such that the whole shape is covered and none of the pieces
+            overlap. This page randomly generates a large number of such puzzles, ranks some according to an interestingness
+            measure and presents the 6 highest ranked shapes for you to choose from. The progress of the generation
+            process can be seen within the arrow above. Once the arrow has completely filled, click it to see which shapes the
+            generator has come up with.</p>
+        <p id = "chooseParagraph">These are the 6 shapes that the interestingness measure has ranked as most interesting
+            among the generated puzzles. If you click on one of them you can try to solve the puzzle. If you find none
+            of them interesting, you can generate new shapes.</p>
+        <p id = "gameParagraph">You can now try to solve this puzzle. The tans on the right have to be placed onto the shape
+            in a way such that the whole shape is covered and none of the pieces overlap. Clicking or tapping a tan rotates it by
+            45 degrees. Dragging a tan moves it around. Starting to drag close to the vertices of a tan will also cause a rotation.
+            Which action will be performed is indicated by an icon to left of the flip button. The button on the lower right flips the
+            parallelogram.</p>
     </aside>
 </section>
 
