Implementation draft done

--- a/Code/index.html
+++ b/Code/index.html
@@ -98,7 +98,7 @@
             have to be placed within a given shape in a way such that the whole
             shape is covered and none of the pieces
             overlap. This page randomly generates a large number of such
-            puzzles, ranks some according to an interestingness
+            puzzles, ranks them according to an interestingness
             measure and presents the 6 highest ranked shapes for you to choose
             from. The progress of the generation
             process can be seen within the arrow above. Once the arrow has
